# gito

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bump_version.sh  gito.db  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: bump-version.yml  install-test.yml  rust-build.yml
src/: database.rs  handlers.rs  main.rs
src/db/: schema.sql
